SkyXplore - Delivering resources (#150)
* SkyXplore - Delivering resources - ConstructConstructionArea flow

* SkyXplore - Delivering resources - Down with the redness

* SkyXplore - StorageSettingProcess

* SkyXplore - Test compile

* Service startup

* ProductionOrder saving

* Missing database savers and loaders

* Process single tick

* Provide update on Queue item progress

* Fix the flow

* Fix displaying deconstruction progress

* Fix StorageSetting flow and RouteCalculator

* Unit testing Part I

* Unit testing Part II

* Unit testing Part III

* Unit testing Part IV

* Unit testing Part V

---------

Co-authored-by: bondabear@gmail.com <Saphy371321>